feat: nprogress 路由加载进度条

--- a/src/assets/styles/common/index.scss
+++ b/src/assets/styles/common/index.scss
@@ -33,6 +33,11 @@ input {
   -webkit-apperance: none;
 }
 
+// nprogress
+#nprogress .bar {
+  background: #e74e3d !important;
+}
+
 /**
  * 浮动 && 清楚浮动
  */
